--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/svg+xml" href="favicon.svg">
+  <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
 
       <!-- Title -->
-  <section id="title">
+  <section id="title" class="gradient-background>
 
     <div class="container col-xxl-8 px-4 py-5">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
