--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/svg+xml" href="favicon.svg">
-  <link rel="stylesheet" href="/styles/style.css">
+  <link rel="stylesheet" href="/11.3 TinDog Project/css/solution.css">
 </head>
 <body>
 
