--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="shortcut icon" href="/tindog-favicon_io/android-chrome-512x512.png" type="image/x-icon">
   <link rel="icon" type="image/svg+xml" href="favicon.svg">
-  <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
 
@@ -128,7 +128,7 @@
       </div>
     </div>
   </div>
-  
+
   <!-- Testimonial -->
   <section id="testimonial">
 
@@ -251,7 +251,7 @@
 
   </section>
   <!-- Footer -->
-  <section id="footer">
+  <section id="footer" class="gradient-background">
 
     <div class="container">
       <footer class="py-3 my-4">
