--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="apple-touch-icon.png">
-  <link rel="shortcut icon" href="/tindog-favicon_io/android-chrome-512x512.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/tindog-favicon_io/favicon-32x32.png type="image/x-icon">
   <link rel="icon" type="image/svg+xml" href="favicon.svg">
 </head>
 <body>
@@ -146,9 +146,6 @@
   </section>
   <!-- Pricing -->
   <section id="pricing">
-
-
-    
         <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
           <h1 class="display-4 fw-normal">Pricing</h1>
           <p class="fs-5 text-muted">Quickly build an effective pricing table for your potential customers with this Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.</p>
